--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Social Network</title>
+    <title>Dead Social</title>
 </head>
 
 <body>
